// EDIT IT, change to your package, service and message
syntax = "proto3";
package blc;

option go_package = "./;blc";

import "google/protobuf/empty.proto";  // 导入必要的protobuf包


service BlcRpcService {
  rpc SignUp (google.protobuf.Empty) returns (SignUpResponse);
  rpc GetUserBalance (UserBalanceRequest) returns (UserBalanceResponse);
  rpc GetActivityAmount (google.protobuf.Empty) returns (ActivityAmountResponse);
  rpc CreateActivity (CreateActivityRequest) returns (google.protobuf.Empty);
  rpc GetIdToActivity (GetIdToActivityRequest) returns (ActivityAndPool);
  rpc BeforeMint (BeforeMintRequest) returns (BeforeMintDTO);
  rpc GetDcFromActivity (GetDcFromActivityRequest) returns (BeforeMintDTO);
  rpc GetUserStatus (GetUserStatusRequest) returns (UserStatusResponse);
  rpc CheckDcAndReturnTime (CheckDcAndReturnTimeRequest) returns (CheckDcAndReturnTimeOutputDTO);
  rpc GetHashToDcId (GetHashToDcIdRequest) returns (GetHashToDcIdResponse);
  rpc Give (GiveRequest) returns (google.protobuf.Empty);
  rpc GetDcHistoryAndMessage (GetDcHistoryAndMessageRequest) returns (DcHistoryAndMessageOutputDTO);
  rpc GetPoolAmount (google.protobuf.Empty) returns (PoolAmountResponse);
  rpc CreatePool (CreatePoolRequest) returns (google.protobuf.Empty);
  rpc Mint (MintRequest) returns (BeforeMintDTO);
}

// 为每个RPC方法定义请求和响应消息

message SignUpResponse {
  string private_key = 1;
  string address = 2;
}

message UserBalanceRequest {
  string address = 1;
}

message UserBalanceResponse {
  string balance = 1;
}

message ActivityAmountResponse {
  int32 amount = 1;
}

message CreateActivityRequest {
  string user_key = 1;
  CreateActivityDTO args = 2;
}

message GetIdToActivityRequest {
  int32 id = 1;
}

message BeforeMintRequest {
  int32 id = 1;
}

message GetDcFromActivityRequest {
  string user_key = 1;
  GetDcFromActivityDTO args = 2;
}

message GetUserStatusRequest {
  string hash = 1;
}

message UserStatusResponse {
  int64 status = 1;
}

message CheckDcAndReturnTimeRequest {
  CheckDcAndReturnTimeDTO dto = 1;
}

message GetHashToDcIdRequest {
  bytes hash = 1;
}

message GetHashToDcIdResponse {
  int32 dc_id = 1;
}

message GiveRequest {
  string user_key = 1;
  GiveDTO giveDTO = 2;
}

message GetDcHistoryAndMessageRequest {
  int64 id = 1;
}

message PoolAmountResponse {
  int32 amount = 1;
}

message CreatePoolRequest {
  string user_key = 1;
  CreatePoolDTO dto = 2;
}

message MintRequest {
  string user_key = 1;
  int32 pool_id = 2;
}



message GiveDTO {
  string to_address = 1;
  int32 dc_id = 2;
}

message GetDcFromActivityDTO {
  int64 activity_id = 1;
  bytes password = 2;
}

message DcHistoryAndMessageOutputDTO {
  repeated TraceStruct args = 1;
  bytes hash = 2;
  string creator_address = 3;
  string owner_address = 4;
  string dc_name = 5;
  int64 pool_id = 6;
}

message CreatePoolDTO {
  int64 limit_amount = 1;
  int64 price = 2;
  int64 amount = 3;
  string cid = 4;
  string dc_name = 5;
}

message CreateActivityDTO {
  string name = 1;
  bytes password = 2;
  int64 amount = 3;
  string cid = 4;
  string dc_name = 5;
}

message CheckDcAndReturnTimeOutputDTO {
  bool check_result = 1;
  repeated int64 time_list = 2;
}

message CheckDcAndReturnTimeDTO {
  string owner = 1;
  repeated bytes collection_hash = 2;
}

message BeforeMintDTO {
  int64 dc_id = 1;
  bytes unique_id = 2;
}

message ActivityAndPool {
  Activity activity = 1;
  Pool pool = 2;
}

message Pool {
  string cid = 1;
  string name = 2;
  int64 price = 3;
  int64 amount = 4;
  int64 left = 5;
  int64 limit_amount = 6;
  string creator = 7;
  int64 create_time = 8;
}

message Dc {
  bytes unique_hash = 1;
  int64 mint_time = 2;
  int64 pool_id = 3;
  int64 index_in_pool = 4;
}

message Activity {
  string name = 1;
  bytes encoded_key = 2;
  int64 pool_id = 3;
}

message TraceStruct {
  string sender = 1;
  string to = 2;
  int64 operate_time = 3;
  string operate_record = 4;
}
